ajout menu + alleger opacité

--- a/index.html
+++ b/index.html
@@ -23,19 +23,31 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Pardon Maman</strong> <span>Tatoo &amp; Piercing</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<label for="menu-mobile" class="menu-mobile"><i class="fa fa-bars" aria-hidden="true"></i></label>
+							<input type="checkbox" id="menu-mobile" role="button">
+							<ul>
+								<li class="menu-html"><a href="#">Tattoo</a>
+									<ul class="submenu">
+										<li><a href="#">Ben</a></li>
+										<li><a href="#">Chankar</a></li>
+										<li><a href="#">David</a></li>
+										<li><a href="#">Jibé</a></li>
+										<li><a href="#">John Stone</a></li>
+									</ul>
+								</li>
+								<li class="menu-html"><a href="#">Piercing</a>
+								</li>
+								<li class="menu-html"><a href="#">Hygiène</a>
+								</li>
+								<li class="menu-html"><a href="#">Bon Cadeau</a>
+								</li>
+								<li class="menu-html"><a href="#">Galerie</a>
+								</li>
+							</ul>
 						</nav>
 					</header>
 
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Tatoo</a></li>
-								<li><a href="landing.html">Piercing</a></li>
-								<li><a href="generic.html">Hygiène &amp; conseils</a></li>
-								<li><a href="elements.html">Bon Cadeau</a></li>
-								<li><a href="elements.html">Galerie</a></li>
-						</ul>
-					</nav>
+			
 
 				<!-- Banner -->
 					<section id="banner" class="major">
