--- a/landing.html
+++ b/landing.html
@@ -47,10 +47,10 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="images/david.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Landing</h1>
+								<h1>David</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -66,7 +66,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Description</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 								</div>
@@ -75,65 +75,77 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<a class="image">
+										<img src="images/david1.jpg" alt="" data-position="center center" />
 									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Orci maecenas</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
+									<a class="image">
+										<img src="images/david2.jpg" alt="" data-position="center center" />
+									</a>
+									<a class="image">
+										<img src="images/david4.jpg" alt="" data-position="center center" />
+									</a>
+									<a class="image">
+										<img src="images/david6.jpg" alt="" data-position="center center" />
+									</a>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									<a class="image">
+										<img src="images/david10.jpg" alt="" data-position="center center" />
 									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Rhoncus magna</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
+									<a class="image">
+										<img src="images/david8.jpg" alt="" data-position="center center" />
+									</a>
+									<a class="image">
+										<img src="images/david3.jpg" alt="" data-position="center center" />
+									</a>
+									<a class="image">
+										<img src="images/david5.jpg" alt="" data-position="center center" />
+									</a>
+									<a class="image">
+										<img src="images/david11.jpg" alt="" data-position="center center" />
+									</a>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<a class="image">
+										<img src="images/david9.jpg" alt="" data-position="center center" />
 									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Sed nunc ligula</h3>
-											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
+									<a class="image">
+										<img src="images/david12.jpg" alt="" data-position="top center" />
+									</a>
+									<a class="image">
+										<img src="images/david13.jpg" alt="" data-position="top center" />
+									</a>
+									<a class="image">
+										<img src="images/david6.jpg" alt="" data-position="top center" />
+									</a>
+								</section>
+								<section>
+									<a class="image">
+										<img src="images/david14.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<a class="image">
+										<img src="images/david10.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<a class="image">
+										<img src="images/david11.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<a class="image">
+										<img src="images/david3.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<a class="image">
+										<img src="images/david5.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<a class="image">
+										<img src="images/david8.jpg" alt="" data-position="25% 25%" />
+									</a>
 								</section>
 							</section>
 
 						<!-- Three -->
 							<section id="three">
 								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
+									<h2>Commentaires</h2>
+									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 								</div>
 							</section>
 
@@ -145,7 +157,7 @@
 							<section>
 								<form method="post" action="#">
 									<div class="field half first">
-										<label for="name">Name</label>
+										<label for="name">Nom</label>
 										<input type="text" name="name" id="name" />
 									</div>
 									<div class="field half">
@@ -157,35 +169,10 @@
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
+										<li><input type="submit" value="Laisser un Commentaire" class="special" /></li>
+										<li><input type="reset" value="Effacer" /></li>
 									</ul>
 								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
 							</section>
 						</div>
 					</section>
@@ -196,12 +183,10 @@
 							<ul class="icons">
 								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
+							<img class="snat" src="images/snat-large.jpg">
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Robin Regis | Anthony Lesage</li></li>
 							</ul>
 						</div>
 					</footer>
