ajout logo fb + redirection menu

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>PARDON MAMAN | Tattoo et Piercing</title>
@@ -30,7 +25,7 @@
 									<ul class="submenu">
 										<li><a href="#">Ben</a></li>
 										<li><a href="#">Chankar</a></li>
-										<li><a href="#">David</a></li>
+										<li><a href="landing.html">David</a></li>
 										<li><a href="#">Jibé</a></li>
 										<li><a href="#">John Stone</a></li>
 									</ul>
@@ -75,7 +70,7 @@
 										<img src="images/piercing.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Piercing</a></h3>
+										<h3><a href="#" class="link">Piercing</a></h3>
 										<p>Ipsum dolor sit amet</p>
 									</header>
 								</article>
@@ -84,7 +79,7 @@
 										<img src="images/tattoo.jpg" alt="" />
 									</span>
 									<header class="major black">
-										<h3><a href="landing.html" class="link">Tattoo</a></h3>
+										<h3><a href="#" class="link">Tattoo</a></h3>
 										<p>feugiat amet tempus</p>
 									</header>
 								</article>
@@ -93,7 +88,7 @@
 										<img src="images/hygiene.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Hygiène et Conseils</a></h3>
+										<h3><a href="#" class="link">Hygiène et Conseils</a></h3>
 										<p>Lorem etiam nullam</p>
 									</header>
 								</article>
@@ -102,7 +97,7 @@
 										<img src="images/cadeau.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Bon cadeau</a></h3>
+										<h3><a href="#" class="link">Bon cadeau</a></h3>
 										<p>Nisl sed aliquam</p>
 									</header>
 								</article>
@@ -116,7 +111,7 @@
 									</header>
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ex rerum beatae eos ullam natus voluptatum esse. Corporis laudantium temporibus suscipit quam velit consectetur, quae mollitia, neque nostrum. Ex, consequatur!.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Visiter</a></li>
+										<li><a href="#" class="button next">Visiter</a></li>
 									</ul>
 								</div>
 							</section>
@@ -189,7 +184,7 @@
 					</footer>
 
 			</div>
-
+			<div id="slap_fb_slider" style="display: none"><script type="text/javascript" src="http://surlapage.fr/script/facebook-slider?fb_url=https://www.facebook.com/PardonMamanTattoo&amp;fb_width=290&amp;fb_height=590&amp;fb_faces=true&amp;fb_stream=true&amp;fb_header=true&amp;fb_border=true&amp;fb_theme=light&amp;speed=FAST&amp;fb_pic=sign&amp;position=RIGHT"></script><a href="http://rigolotes.fr/t/images" title="photos droles">photos droles</a></div>
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
