--- a/landing.html
+++ b/landing.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Landing - Forty by HTML5 UP</title>
+		<title>PARDON MAMAN | David</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,29 +17,35 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Pardon Maman</strong> <span>Tatoo &amp; Piercing</span></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<label for="menu-mobile" class="menu-mobile"><i class="fa fa-bars" aria-hidden="true"></i></label>
+							<input type="checkbox" id="menu-mobile" role="button">
+							<ul>
+								<li class="menu-html"><a href="#">Tattoo</a>
+									<ul class="submenu">
+										<li><a href="#">Ben</a></li>
+										<li><a href="#">Chankar</a></li>
+										<li><a href="landing.html">David</a></li>
+										<li><a href="#">Jibé</a></li>
+										<li><a href="#">John Stone</a></li>
+									</ul>
+								</li>
+								<li class="menu-html"><a href="#">Piercing</a>
+								</li>
+								<li class="menu-html"><a href="#">Hygiène</a>
+								</li>
+								<li class="menu-html"><a href="#">Bon Cadeau</a>
+								</li>
+								<li class="menu-html"><a href="#">Galerie</a>
+								</li>
+							</ul>
 						</nav>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
-
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style2">
+					<section id="banner" class="major">
 						<div class="inner">
 							<span class="image">
 								<img src="images/david.jpg" alt="" />
@@ -169,10 +170,35 @@
 										<textarea name="message" id="message" rows="6"></textarea>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Laisser un Commentaire" class="special" /></li>
+										<li><input type="submit" value="Envoyer" class="special" /></li>
 										<li><input type="reset" value="Effacer" /></li>
 									</ul>
 								</form>
+							</section>
+							<section class="split">
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-envelope"></span>
+										<h3>Email</h3>
+										<a href="#">contact@pardon-maman.fr</a>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-phone"></span>
+										<h3>Téléphone</h3>
+										<span>09 52 95 67 55</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon alt fa-home"></span>
+										<h3>Localisation</h3>
+										<div class="google-maps">
+											<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10503.939120661733!2d2.522667!3d48.839429!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e60d932f702601%3A0xf74517d74d575546!2s2+Boulevard+du+G%C3%A9n%C3%A9ral+Gallieni%2C+94360+Bry-sur-Marne%2C+France!5e0!3m2!1sfr!2sus!4v1478267974895" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+										</div>
+									</div>
+								</section>
 							</section>
 						</div>
 					</section>
@@ -192,6 +218,7 @@
 					</footer>
 
 			</div>
+			<div id="slap_fb_slider" style="display: none"><script type="text/javascript" src="http://surlapage.fr/script/facebook-slider?fb_url=https://www.facebook.com/PardonMamanTattoo&amp;fb_width=290&amp;fb_height=590&amp;fb_faces=true&amp;fb_stream=true&amp;fb_header=true&amp;fb_border=true&amp;fb_theme=light&amp;speed=FAST&amp;fb_pic=sign&amp;position=RIGHT"></script><a href="http://rigolotes.fr/t/images" title="photos droles">photos droles</a></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
